--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <h1>GRAND TACOS</h1>
         <div class="contact-info">
             <a href="https://wa.me/212661112540" target="_blank">
-                <i class="fas fa-phone"></i> +212 6 61 11 25 40
+                <i class="fab fa-whatsapp" style="color: rgb(99, 240, 99); font-size: 20px;"></i> +212 6 61 11 25 40
             </a>
             <a href="https://www.google.com/maps?q=GRAND+TACOS+Avenue+Principale+Casablanca" target="_blank">
                 <i class="fas fa-map-marker-alt"></i> Avenue Principale, Casablanca
