--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,11 @@
                 <i class="fab fa-whatsapp" style="color: rgb(99, 240, 99); font-size: 20px;"></i> +212 6 61 11 25 40
             </a>
             <a href="https://www.google.com/maps?q=GRAND+TACOS+Avenue+Principale+Casablanca" target="_blank">
-                <i class="fas fa-map-marker-alt"></i> Avenue Principale, Casablanca
+                <i class="fas fa-map-marker-alt" style="color: rgb(99, 240, 99); font-size: 20px;"></i> Avenue Principale, Casablanca
             </a>
 
-            <a href="orders.html" style="color: rgb(231, 210, 18); font-weight: 800; font-size: larger;">
-                Ma Commande
+            <a href="orders.html">
+                <i class="fas fa-shopping-cart" style="color: rgb(99, 240, 99); font-size: 20px;"></i> Ma Commande
             </a>
         </div>
     </header>
