--- a/public/orders.html
+++ b/public/orders.html
@@ -160,5 +160,55 @@
             });
         });
     </script>
+    <style>
+
+
+
+/* Footer */
+footer {
+    background-color: #ff5722;
+    color: #fff;
+    text-align: center;
+    padding: 20px 10px;
+    font-family: 'Arial', sans-serif;
+    font-size: 14px;
+}
+
+footer p {
+    margin: 10px 0;
+}
+
+footer a {
+    color: #fff;
+    margin: 0 10px;
+    text-decoration: none;
+    font-size: 18px;
+    transition: color 0.3s ease;
+}
+
+footer a:hover {
+    color: #844b3e;
+}
+
+footer a i {
+    vertical-align: middle;
+}
+
+footer p:last-child {
+    margin-top: 15px;
+    font-size: 16px;
+}
+
+
+
+
+
+
+
+
+
+
+
+    </style>
 </body>
 </html>
